--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 opencv-python==4.4.0.44
 tqdm==4.46.0
 click==7.1.2
+numpy==1.18.5
 scikit-image==0.17.2
 psycopg2==2.8.6
 Pillow==7.2.0
+Flask==1.1.2
+Flask-Cors==3.0.7
+requests
